# FerroCopy

./: .gitignore  Cargo.toml  README.md
crates/ferrocopy/: Cargo.toml  README.md  build.rs  plan.md
crates/ferrocopy-hook/: Cargo.toml
crates/ferrocopy-hook/src/: lib.rs
crates/ferrocopy/src/: change_detection.rs  clipboard.rs  color_scheme.rs  config.rs  crash_reporter.rs  dot.rs  engine.rs  eventloop.rs  events.rs  fanout.rs  file_watcher.rs  flexbox.rs  gui.rs  hash.rs  iopool.rs  lua_ext.rs  main.rs  plugin.rs  rpc.rs  schedule.rs  shell.rs  signal.rs  ssh.rs  telemetry.rs  threadbound.rs  wasi_sandbox.rs
crates/quadcomp/: Cargo.toml
crates/quadcomp/src/: lib.rs  main.rs
crates/quadcomp/src/engine/: compositor.rs  state.rs
crates/quadcomp/src/input/: mod.rs
crates/quadcomp/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/yserver-engine/: Cargo.toml
crates/yserver-engine/src/: main.rs  shaders.wgsl
crates/yserver-engine/src/engine/: core_loop.rs  drawable_store.rs  message.rs  mod.rs  telemetry.rs
crates/yserver-engine/src/input/: mod.rs
crates/yserver-engine/src/platform/: mod.rs
crates/yserver-engine/src/render/: mod.rs  wgpu_backend.rs
src/: config.rs  engine.rs  gui.rs  hash.rs  main.rs  shell.rs
test_copy_dst/: file3.txt
test_copy_src/: file1.txt  file2.txt
tests/: fanout_integration_test.rs  lua_integration_test.rs  rpc_integration_test.rs  ssh_integration_test.rs  wasi_integration_test.rs
tests/lua/: bad_syntax.lua  filter_size.lua  filter_txt.lua
tests/plugins/: test_plugin.wasm
tests/plugins/test-plugin/: Cargo.toml
tests/plugins/test-plugin/src/: lib.rs
