[package]
name = "ferrocopy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "fs", "time", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2"
anyhow = "1"
humansize = "2"
filetime = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
winreg = "0.52"
shellexpand = "3"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
fastrand = "2"
notify-debouncer-full = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
